# ableton-mcp-boost

./: README.md  pyproject.toml
AbletonMCP-boost_Remote_Script/: __init__.py
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: server.py
